Fixed dark mode

--- a/common/common.scss
+++ b/common/common.scss
@@ -65,16 +65,6 @@ input[type="color"]:focus,
 // 	flex-direction: row;
 // 	border: 2px solid var(--tertiary);
 // }
-//
-
-#create-topic {
-	color: var(--secondary);
-	background: $color-mint;
-	transition: all 0.3s linear;
-	border-radius: 10px;
-	text-transform: none;
-	border: 2px solid $color-mint;
-}
 
 // End fix dark mode
 
